# TND004-Datastructures

./: README.md
Code1/: Exerc1.cpp
Code2/: set.cpp
Code3/: BinarySearchTree.h  CMakeLists.txt  ex4.cpp
lab_2/: main.cpp
lab_3/: BinarySearchTree.h  CMakeLists.txt  test1.cpp
